--- a/Login.css
+++ b/Login.css
@@ -23,6 +23,7 @@ input{
     font-size: 1rem;
     border-radius: 25px;
     width: 15.5rem;
+    margin-bottom: 0.5rem;
 }
 h1{
     font-size: 2rem;
@@ -105,14 +106,6 @@ label {
     margin-top: 1rem;
 }
 
-label:hover {
-    color: #007bff;
-}
-
-/* input[type="checkbox"]:focus {
-    outline: 2px solid #007bff;
-    outline-offset: 2px;
-} */
 .empty{
     width: 2.2rem;
     height: 1.2rem;
