--- a/SiteNest.css
+++ b/SiteNest.css
@@ -159,10 +159,8 @@ body {
 }
 #userlink{
     font-style: italic;
+    text-align: left;
 }
-/* .content{
-    padding: 3rem;
-} */
 .greetings-container{
     display: flex;
     justify-content: space-between;
