In progress with siteNest page designsss both the html, css, and js

--- a/Create_Account.css
+++ b/Create_Account.css
@@ -99,13 +99,14 @@ button:last-of-type{
     align-items: center; 
     width: 15.5rem; 
     gap: 5px;
-    margin: -2rem 0 1.25rem 0;
+    margin: -2rem 0 1rem 0;
     font-weight: 900;
     transition: opacity 0.5s ease-in;
 }
 #username-signal,#password-signal,#email-signal p{ 
     text-transform: lowercase;
     font-size: 0.5rem;
+    line-height: 0.75rem;
 }
 
 
@@ -169,4 +170,15 @@ button:last-of-type{
     100% {
         width: 100%;
     }
+}
+
+
+.password-seer{
+    position: relative;
+    left: 6.5rem;
+    bottom: 1.85rem;
+}
+
+input[id="passcode"]{
+    margin-bottom: 0;
 }
